--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,23 @@
-[build-system]
-requires = [
-  "setuptools>=61.0",
-  "torch>=2.0.0",
-  "transformers>=4.0.0",
-
-]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "theendisnever"
-version = "1.1.0"
-authors = [
-  { name="Andrew Hinh", email="ajhinh@gmail.com" },
-]
+[tool.poetry]
+name = "thendisnever"
+version = "0.4.0"
 description = "A package to easily make an LLM talk with itself for eternity."
+authors = ["Andrew Hinh <ajhinh@gmail.com>"]
+repository = "https://github.com/andrewhinh/thendisnever"
+license = "MIT"
 readme = "README.md"
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
 
-[project.urls]
-"Homepage" = "https://github.com/andrewhinh/theendisnever"
-"Bug Tracker" = "https://github.com/andrewhinh/theendisnever/issues"
+[tool.poetry.dependencies]
+python = "^3.8"
+torch = "^2.0.0"
+transformers = "^4.0.0"
+
+[tool.poetry.dev-dependencies]
+pytest = "*"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.urls]
+issues = "https://github.com/andrewhinh/thendisnever/issues"
