--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "thendisnever"
-version = "0.6.0"
-description = "A package to easily make an LLM talk with itself for eternity."
+version = "0.7.0"
+description = "A package to easily make an LLM talk with itself forever."
 authors = ["Andrew Hinh <ajhinh@gmail.com>"]
 repository = "https://github.com/andrewhinh/thendisnever"
 license = "MIT"
